--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "@mui/material": "5.15.17",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "@material-ui/core": "^4.12.4",
+    "html-webpack-plugin": "^5.6.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
