--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "axios": "^1.7.2",
     "html-webpack-plugin": "^5.6.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
