--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
     "@mui/material": "5.15.17",
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-scripts": "5.0.1"
+    "react-redux": "^9.1.2",
+    "react-scripts": "5.0.1",
+    "redux": "^5.0.1"
   },
   "scripts": {
     "start": "craco start",
